--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,10 @@ layout: default
     <a href="/tag/{{tag}}">{{tag}}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}</span>
 </section>
 
-
+<script src="https://utteranc.es/client.js"
+          repo="nswon/nswon.github.io"
+          issue-term="pathname"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+</script>
